#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-14
2014-09-09 Mikhail S. Dubrovin
- in GeometryAccess.h - improve doxygen documentation

Tag: V00-02-13
2014-09-02 Mikhail S. Dubrovin
- in src/GeometryAccess.cpp - explicit conversion from double to unsigned

Tag: V00-02-12
2014-08-27 Mikhail S. Dubrovin
- in SegGeometry*.py, Geometry*.py, and CalibFileFinder.py add Sphinx documentation of interfaces
	
Tag: V00-02-11
2014-08-19 Mikhail S. Dubrovin
- in test/ex_geometry_access.cpp and GeometryAccess.py change test files location after summer shutdown
- in SegGeometry.py update comments

Tag: V00-02-10
2014-08-13 Mikhail S. Dubrovin
- in PSCalib/ex_geometry_access add test of methods get_pixel_coord_indexes(...), img_from_pixel_arrays(...)
- update doxy-doc inn GeometryAccess.h
2014-08-12 Mikhail S. Dubrovin
- in GeometryAccess.py add methods get_pixel_coord_indexes(...), img_from_pixel_arrays(...)
2014-08-11 Mikhail S. Dubrovin
- in GeometryObject and GeometryAccess add methods for get_pixel_scale_size(...) and complete implementation for pixel area
	
Tag: V00-02-09
2014-08-08 Mikhail S. Dubrovin
- move python modules from pyimgalgos to PSCalib for 
        GeometryObject.py, GeometryAccess.py
	SegGeometry.py, SegGeometryStore.py ,SegGeometryCspad2x1V1.py

Tag: V00-02-08
2014-08-08 Mikhail S. Dubrovin
- in SegGeometryCspad2x1V1 - move definition of static const parameters from *.h to *.cpp 

Tag: V00-02-07
2014-08-06 Mikhail S. Dubrovin
- segment geometry is defined through the static factory method, add access to pixel areas
- add SegGeometry - interface, 
- add SegGeometryCspad2x1V1 - implementation for cspad2x1